--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 2 :: SDI TERMNUMBER</title>
+    <title>Ariana Antonio :: Project 2 :: SDI 1305</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
     <meta charset="UTF-8">
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>SDI 1305: Ariana Antonio</h1>
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>I chose to stick with my hiking theme from last week. Besides being something I am passionate about, it seemed to be a topic that would have many options to fit the parameters of the story requirements. Since it's a topic I really enjoy, it makes it easier to write about.</p>
+<p></p>
+<p></p>
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>05/15/14, Ariana Antonio</p>
 </footer>
 <script type="text/javascript" src="Antonio_Ariana_Assignment2.js"></script>
 </body>
