--- a/Antonio_Ariana_assignment3/sdi-project3.html
+++ b/Antonio_Ariana_assignment3/sdi-project3.html
@@ -11,10 +11,9 @@
     <h2>Project 3</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
-</article>
+<p>Surprise surprise! I stuck with my hiking story. While it would have been nice to work with a new story this time, I felt that this weeks assignment was so difficult and complicated that I needed the help of being able to reuse some code. Lame reason, I know, but it was neccessary for my sanity.</p>
+<p></p>
+<p></p>
 <footer>
     <p>05/22/13, Ariana Antonio</p>
 </footer>
