Finished Inde file.

--- a/Antonio_Ariana_project1/index.html
+++ b/Antonio_Ariana_project1/index.html
@@ -1,20 +1,21 @@
 <!doctype html>
+	<!--Author: Ariana Antonio-->
+<!--Project 1: Movie Journal-->
+<!--VFW 1307-->
 <html>
-	<head>
+    <head>
+	<meta charset="utf-8" />
+	<meta name="description" content="Add Item for Movie Journal web app." />
+        <meta name="keywords" content="web app, movie journal, list" />
+        <meta name="robots" content="index, follow" />
+        <meta name="viewport" content="user-scalable=no", width=device-width" />
 		
-		<!-- Character Set-->
-		<meta charset="utf-8" />
-		<link type="text/css" src="css/style.css />
-		<!--Page Title-->
-		<title>Hello World</title>
-		
-	</head>
-	<body>
-		<div class="container">
-			<h1>Hello World!</h1>
-			<p>This is a test!</p>
-		</div>
-	<!--Content goes here-->
-		<script type="text/javascript" src="js/main.js"></script>
-	</body>
+	<title>Movie Journal</title>
+    </head>
+    
+    <body>
+	<h1>Movie Journal</h1>
+	    <p>Never forget where you were, who you were with, or how you felt when you saw a movie. Log it with Movie Journal!</p>
+	    <a href="additem.html">Add a movie</a>
+    </body>
 </html>
