Made new prjoect folders.

--- a/VFW Projects/Antonio_Ariana_project1/index.html
+++ b/VFW Projects/Antonio_Ariana_project1/index.html
@@ -16,6 +16,8 @@
     <body>
 	<h1>Movie Journal</h1>
 	    <p>Never forget where you were, who you were with, or how you felt when you saw a movie. Log it with Movie Journal!</p>
-	    <a href="additem.html">Add a movie</a>
+	<h2>Let's Get Watching!</h2>    
+	<a href="additem.html">Add a movie</a>
+	
     </body>
 </html>
