--- a/VFW Projects/Antonio_Ariana_project1/additem.html
+++ b/VFW Projects/Antonio_Ariana_project1/additem.html
@@ -10,7 +10,7 @@
         <meta name="robots" content="index, follow" />
         <meta name="viewport" content="user-scalable=no", width=device-width" />
 		
-	<title>Movie Journal</title>
+	<title>New Movie</title>
     </head>
     
     <body>
@@ -19,10 +19,10 @@
 	    <fieldset>
                 <legend>Movie Information</legend>
                 <ul>
-                    <li><label for="title">Movie Title</label><input type="text" id="title" /></li>
-                    <li><label for="date">Date Seen</label><input type="date" id="date" /></li>
+                    <li><label for="title">Movie Title:</label><input type="text" id="title" /></li>
+                    <li><label for="date">Date Seen:</label><input type="date" id="date" /></li>
                     <li>
-                        <label for="genre">Movie Genre</label>
+                        <label for="genre">Movie Genre:</label>
                         <select id="genre">
                             <optgroup label="Genre">
                                 <option value="Comedy">Comedy</option>
@@ -35,18 +35,24 @@
                         </select>
                     </li>
                     <li>
-                        <label for="where">Where Did You See The Movie?</label>
+                        <label for="where">Where I Saw The Movie:</label>
                         <ul>
                             <li><input type="radio" checked value="Movie Theater" id="movietheater" name="where" /><label for="movietheater">Movie Theater</label></li>
                             <li><input type="radio" value="At Home" id="home" name="where" /><label for="home">At Home</label></li>
                             <li><input type="radio" value="Other" id="other" name="where" /><label for="other">Other</label></li>
                         </ul>
                     </li>
-                    <li>
-                        <label for="rating">Rate The Movie</label><input type="range" name="rating" min="1" max="10" step="1" value="5" /></li>
-                   <input type="submit" value="Log Movie" />
+                    <li><label for="friends">Who I Saw It With:</label><input type="text" id="friends" /></li>          
+                    <li><label for="rating">Movie Rating:</label><input type="range" name="rating" min="1" max="10" step="1" value="5" /></li>
+                    <li><label for="review">Movie Review And Memorable Moments:</label><textarea id="review"></textarea></li>
+                   
                 </ul>
             </fieldset>
+            <input type="submit" value="Log Movie" />
+            <footer>
+                <a href="#">Clear Stored Data</a>
+                <a href="#">Display Data</a>
+            </footer>
         </form>
     </body>
 </html>
