--- a/VFW Projects/Antonio_Ariana_project1/index.html
+++ b/VFW Projects/Antonio_Ariana_project1/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--Author: Ariana Antonio-->
-<!--Project 1: Movie Journal-->
+<!--Project 2: Movie Journal-->
 <!--VFW 1307-->
 <html>
     <head>
@@ -9,7 +9,7 @@
         <meta name="keywords" content="web app, movie journal, list" />
         <meta name="robots" content="index, follow" />
         <meta name="viewport" content="user-scalable=no, width=device-width" />
-		
+	<link href="css/style.css" rel="stylesheet" />	
 	<title>Movie Journal</title>
     </head>
     <body>
