Final additions before breaking.

--- a/VFW Projects/Antonio_Ariana_project2/additem.html
+++ b/VFW Projects/Antonio_Ariana_project2/additem.html
@@ -44,7 +44,7 @@
                     <li><label for="friends">Who I Saw It With:</label><br><input type="text" id="friends" /></li>          
                     <li><label for="rating">Movie Rating:</label><br><input type="range" id="rating" min="1" max="10" step="1" value="5" /></li>
                     <li><label for="favorite">Save As Favorite?</label><br><input type="checkbox" id="favorite" /></li>
-		    <li><label for="review">Movie Review And Memorable Moments:</label><textarea id="review"></textarea></li>
+		    <li><label for="review">Movie Review And Memorable Moments:</label><br><textarea id="review"></textarea></li>
                 </ul>
 		<input type="hidden" value="English" />
 		<input type="submit" value="Log Movie" />
