--- a/VFW Projects/Antonio_Ariana_project1/index.html
+++ b/VFW Projects/Antonio_Ariana_project1/index.html
@@ -9,12 +9,13 @@
         <meta name="keywords" content="web app, movie journal, list" />
         <meta name="robots" content="index, follow" />
         <meta name="viewport" content="user-scalable=no, width=device-width" />
-	<link href="css/style.css" rel="stylesheet" />	
+	<link href="css/style.css" rel="stylesheet" type="text/css" />	
 	<title>Movie Journal</title>
     </head>
+    <body style='font-size: 0.6em;font-family: Arial;float:left;'><a href='http://www.clker.com/clipart-movie-reel-1.html' target='_blank'><img src="http://www.clker.com/cliparts/F/d/D/v/2/B/movie-reel-th.png" /><br>Movie Reel clipart</a> <br/>from <a href='http://www.clker.com/'>Clker.com</a></body> 
     <body>
 	<header><h1>Movie Journal</h1></header>
-	<p>Never forget where you were, who you were with, or how you felt when you saw a movie. Log it with Movie Journal!</p>
+	<p>Nevr forget where you were, who you were with, or how you felt when you saw a movie. Log it with Movie Journal!</p>
 	<h2>Let's Get Watching!</h2>    
 	<a href="additem.html">Add a movie</a>
     </body>
