--- a/VFW Projects/Antonio_Ariana_project2/index.html
+++ b/VFW Projects/Antonio_Ariana_project2/index.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <!--Author: Ariana Antonio-->
-<!--Project 1: Movie Journal-->
+<!--Project 2: Movie Journal-->
 <!--VFW 1307-->
 <html>
     <head>
-	<meta charset="utf-8" />
+        <meta charset="utf-8" />
 	<meta name="description" content="Add Item for Movie Journal web app." />
         <meta name="keywords" content="web app, movie journal, list" />
         <meta name="robots" content="index, follow" />
         <meta name="viewport" content="user-scalable=no, width=device-width" />
-		
+	<link href="css/style.css" rel="stylesheet" type="text/css" />	
 	<title>Movie Journal</title>
     </head>
-    <body>
-	<header><h1>Movie Journal</h1></header>
+    <body background="http://www.clker.com/cliparts/F/d/D/v/2/B/movie-reel-hi.png">
+	<header><h1><img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/>Movie Journal<img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/></h1></header>
 	<p>Never forget where you were, who you were with, or how you felt when you saw a movie. Log it with Movie Journal!</p>
 	<h2>Let's Get Watching!</h2>    
-	<a href="additem.html">Add a movie</a>
+	<form action="additem.html">
+	    <input type="submit" value="Add a movie" id="addMovie">
+	</form>
     </body>
 </html>
