Added gwtElementById function, dynamic select, and link click events.

--- a/VFW Projects/Antonio_Ariana_project2/additem.html
+++ b/VFW Projects/Antonio_Ariana_project2/additem.html
@@ -50,9 +50,10 @@
 		<input type="button" value="Log Movie" id="logMovie" />
             </fieldset>
 	    <footer>
-                <a href="#">Clear Stored Data</a>
-                <a href="#">Display Data</a>
+                <a href="#" id="clearData">Clear Stored Data</a>
+                <a href="#" id="displayData">Display Data</a>
             </footer>
         </form>
+	<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
