--- a/VFW Projects/Antonio_Ariana_project2/index.html
+++ b/VFW Projects/Antonio_Ariana_project2/index.html
@@ -19,5 +19,6 @@
 	<form action="additem.html">
 	    <input type="submit" value="Add a movie" id="addMovie">
 	</form>
+	<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
