--- a/VFW Projects/Antonio_Ariana_project4/additem.html
+++ b/VFW Projects/Antonio_Ariana_project4/additem.html
@@ -46,6 +46,7 @@
             <a href="#" id="displayData">Display Data</a>
 	    <a href="additem.html" id="newMovie" style="display:none;">Add New Movie</a>
         </footer>
+	<script type="text/javascript" src="js/json.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
