--- a/VFW Projects/Antonio_Ariana_project4/additem.html
+++ b/VFW Projects/Antonio_Ariana_project4/additem.html
@@ -2,6 +2,7 @@
 <!--Author: Ariana Antonio-->
 <!--Project 4: Movie Journal-->
 <!--VFW 1307-->
+<!--Some non-functioning code has been commented out to be fixed later. Not required for project. -->
 <html>
     <head>
 	<meta charset="utf-8" />
@@ -32,7 +33,10 @@
                         </ul>
                     </li>
                     <li><label for="friends">Who I Saw It With:</label><br><input type="text" id="friends" /></li>          
-                    <li><label for="rating">Movie Rating:</label><br><input type="range" id="rating" min="1" max="10" step="1" value="5" /></li>
+                    <li>
+			<label for="rating">Movie Rating:</label><br><input type="range" id="rating" min="1" max="10" step="1" value="5"/>
+			<!--<input for="ratingInput" type="text" id="ratingInput" value=""> -->
+		    </li>
                     <li><label for="favorite">Save As Favorite?</label><br><input type="checkbox" id="favorite" /></li>
 		    <li><label for="review">* Movie Review:</label><br><textarea id="review"></textarea></li>
                 </ul>
@@ -46,6 +50,11 @@
             <a href="#" id="displayData">Display Data</a>
 	    <a href="additem.html" id="newMovie" style="display:none;">Add New Movie</a>
         </footer>
+	<!-- <script type="text/javascript">
+		function updateTextInput(val) {
+		document.getElementById('ratingInput').value=val; 
+		}
+	</script> -->
 	<script type="text/javascript" src="js/json.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
     </body>
