Updating index.html. Added Browse and Title elements. Still working on formatting.

--- a/MIU/Week_1/Antonio_Ariana_project1/index.html
+++ b/MIU/Week_1/Antonio_Ariana_project1/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!--Author: Ariana Antonio-->
-<!--Project 4: Movie Journal-->
-<!--VFW 1307-->
+<!--Project 1: Movie Journal-->
+<!--MIU 1309-->
 <html>
     <head>
         <meta charset="utf-8" />
@@ -12,13 +12,21 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css" />	
 	<title>Movie Journal</title>
     </head>
-    <body background="http://www.clker.com/cliparts/F/d/D/v/2/B/movie-reel-hi.png">
+    <body>
 	<header><h1><img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/>Movie Journal<img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/></h1></header>
 	<p>Never forget where you were, who you were with, or how you felt when you saw a movie. Log it with Movie Journal!</p>
-	<h2>Let's Get Watching!</h2>    
+	<h3>Let's Get Watching!</h3>    
 	<form action="additem.html">
 	    <input type="submit" value="Add a movie" id="addMovie">
 	</form>
+	<div id="browselist">
+	    <h2 id="browse">Browse by...</h2>
+		<p class="browsetitles">Movie Title</p>
+		<p class="browsetitles">Date</p>
+		<p class="browsetitles">Genre</p>
+		<p class="browsetitles">Rating</p>
+		<p class="browsetitles">Favorites</p>
+	</div>
 	<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
