Added placeholder serch bar.

--- a/MIU/Week_1/Antonio_Ariana_project1/index.html
+++ b/MIU/Week_1/Antonio_Ariana_project1/index.html
@@ -19,13 +19,14 @@
 	<form action="additem.html">
 	    <input type="submit" value="Add a movie" id="addMovie">
 	</form>
+	<label for="search"></label><input type="search" id="search" value="Search Movies" />
 	<div id="browselist">
 	    <h2 id="browse">Browse by...</h2>
-		<p class="browsetitles">Movie Title</p>
-		<p class="browsetitles">Date</p>
-		<p class="browsetitles">Genre</p>
-		<p class="browsetitles">Rating</p>
-		<p class="browsetitles">Favorites</p>
+		<a href="tempBrowsePage.html"class="browsetitles">Movie Title</a>
+		<a href="tempBrowsePage.html"class="browsetitles">Date</a>
+		<a href="tempBrowsePage.html"class="browsetitles">Genre</a>
+		<a href="tempBrowsePage.html"class="browsetitles">Rating</a>
+		<a href="tempBrowsePage.html"class="browsetitles">Favorites</a>
 	</div>
 	<script type="text/javascript" src="js/main.js"></script>
     </body>
