adjusted some margins and lined everything up.

--- a/MIU/Week_1/Antonio_Ariana_project1/additem.html
+++ b/MIU/Week_1/Antonio_Ariana_project1/additem.html
@@ -25,7 +25,7 @@
                     <li><label for="date">* Date Seen:</label><br><input type="date" id="date" /></li>
                     <li id="select"><label for="genre">Movie Genre:</label><br /></li>
 		    <li>
-                        <label for="where">Where I Saw The Movie:</label>
+                        <label for="where" id="where">Where I Saw The Movie:</label>
                         <ul>
                             <li><input type="radio" checked value="Movie Theater" id="movietheater" name="where" /><label for="movietheater">Movie Theater</label></li>
                             <li><input type="radio" value="At Home" id="home" name="where" /><label for="home">At Home</label></li>
