--- a/MIU/Week_1/Antonio_Ariana_project1/index.html
+++ b/MIU/Week_1/Antonio_Ariana_project1/index.html
@@ -14,13 +14,12 @@
     </head>
     <body>
 	<header><h1><img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/>Movie Journal<img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/></h1></header>
-	<img id="filmreel" src="images/FilmReel3_03.gif"/>
-	<p>Never forget where you were, who you were with, or how you felt when you saw a movie. Log it with Movie Journal!</p>
-	<h3>Let's Get Watching!</h3>    
-	<form action="additem.html">
-	    <input type="submit" value="Add a movie" id="addMovie">
-	</form>
-	<label for="search"></label><input type="search" id="search" value="" placeholder="Search Movies..." />
+	<div>
+	    <a href="addItem.html"><img id="filmreel" src="images/FilmReel3_03.gif"/></a>
+	</div>
+	<div>
+	    <label for="search"></label><input type="search" id="search" value="" placeholder="Search Movies..." />
+	</div>
 	<div id="browselist">
 	    <h2 id="browse">Browse by...</h2>
 		<a href="tempBrowsePage.html"class="browsetitles">Movie Title</a>
