Added listview to browse titles. Still working on collapsible list for Genre.

--- a/MIU/Week_2/Antonio_Ariana_GoldApp/tempBrowsePage.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/tempBrowsePage.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--Author: Ariana Antonio-->
-<!--Project 1: Movie Journal-->
+<!--Project 2: My Hoillywood - Gold-->
 <!--MIU 1309-->
 <html>
     <head>
