--- a/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--Author: Ariana Antonio-->
-<!--Project 1: Movie Journal-->
+<!--Project 2: My Hollywood - Gold-->
 <!--MIU 1309-->
 <html>
     <head>
@@ -9,25 +9,41 @@
         <meta name="keywords" content="web app, movie journal, list" />
         <meta name="robots" content="index, follow" />
         <meta name="viewport" content="user-scalable=no, width=device-width" />
-	<link href="css/style.css" rel="stylesheet" type="text/css" />	
+	<link href="css/style.css" rel="stylesheet" type="text/css" data-ajax="false"/>
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
 	<title>My Hollywood</title>
     </head>
     <body>
-	<header><h1><img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/>Movie Journal<img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/></h1></header>
+	<header data-role="header"><h1><img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/>My Hollywood<img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/></h1></header>
 	<div>
-	    <a href="addItem.html"><img id="filmreel" src="images/FilmReel3_03.gif"/></a>
+	    <a href="addItem.html" data-ajax="false"><img id="filmreel" src="images/FilmReel3_03.gif"/></a>
 	</div>
 	<div>
 	    <label for="search"></label><input type="search" id="search" value="" placeholder="Search Movies..." />
 	</div>
 	<div id="browselist">
-	    <h2 id="browse">Browse by...</h2>
-		<h3><a href="tempBrowsePage.html"class="browsetitles">Movie Title</a></h3>
-		<h3><a href="tempBrowsePage.html"class="browsetitles">Date</a></h3>
-		<h3><a href="tempBrowsePage.html"class="browsetitles">Genre</a></h3>
-		<h3><a href="tempBrowsePage.html"class="browsetitles">Rating</a></h3>
-		<h3><a href="tempBrowsePage.html"class="browsetitles">Favorites</a></h3>
+	    <ul data-role="listview">
+		<li data-role="list-divider" id="browse">Browse by...</li>
+		<li><a href="tempBrowsePage.html"class="browsetitles">Movie Title</a></li>
+		<li><a href="tempBrowsePage.html"class="browsetitles">Date</a></li>
+		<li >Genre
+		    <div >
+			<ul data-role="listview" >
+			    <li>Action<img src="images/Action.psd"></li>
+			    <li>Comedy<img src="images/Comedy.psd"></li>
+			    <li>Drama<img src="images/Drama.psd"></li>
+			    
+			</ul>
+		    </div>
+		
+		
+		</li>
+		<li><a href="tempBrowsePage.html"class="browsetitles">Rating</a></li>
+		<li><a href="tempBrowsePage.html"class="browsetitles">Favorites</a></li>
+	    </ul>
 	</div>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+	<script type="text/javascript" src="js/main.js" data-ajax="false"></script>
     </body>
 </html>
