--- a/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
@@ -14,33 +14,142 @@
 	<title>My Hollywood</title>
     </head>
     <body>
-	<header data-role="header"><h1><img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/>My Hollywood<img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/></h1></header>
-	<div>
-	    <a href="addItem.html" data-ajax="false"><img id="filmreel" src="images/FilmReel3_03.gif"/></a>
+	<div data-role="page" id="home">
+	    <div data-role="header">
+		<h1><img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/>My Hollywood<img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/></h1>
+	    </div>
+	    <div data-role="content">
+		<div>
+		    <a href="addItem.html" data-ajax="false"><img id="filmreel" src="images/FilmReel3_03.gif"/></a>
+		</div>
+		<div>
+		    <label for="search"></label><input type="search" id="search" value="" placeholder="Search Movies..." />
+		</div>
+		<div id="browselist">
+		    <ul data-role="listview">
+			<li data-role="list-divider" id="browse">Browse by...</li>
+			<li><a href="tempBrowsePage.html"class="browsetitles">
+			    <h1>Movie Title</h2></a>
+			</li>
+			<li><a href="tempBrowsePage.html"class="browsetitles">
+			    <h1>Date</h2></a>
+			</li>
+			<li >
+			    <h1>Genre</h1>
+			    <div >
+				<ul data-role="listview" data-inset="true">
+				    <li><a href="tempBrowsePage.html" data-ajax="false">
+					<img src="images/Action.psd">
+					<h2>Action</h2>
+				    </li>
+				    <li><a href="tempBrowsePage.html" data-ajax="false">
+					<img src="images/Comedy.psd">
+					<h2>Comedy</h2>
+				    </li>
+				    <li><a href="tempBrowsePage.html" data-ajax="false">
+					<img src="images/Drama.psd">
+					<h2>Drama</h2>
+				    </li>
+				    <li><a href="tempBrowsePage.html" data-ajax="false">
+					<img src="images/Romance.psd">
+					<h2>Romance</h2>
+				    </li>
+				    <li><a href="tempBrowsePage.html" data-ajax="false">
+					<img src="images/Horror.psd">
+					<h2>Horror</h2>
+				    </li>
+				    <li><a href="tempBrowsePage.html" data-ajax="false">
+					<img src="images/Other.psd">
+					<h2>Other</h2>
+				    </li>
+				</ul>
+			    </div>
+			</li>
+			<li><a href="tempBrowsePage.html"class="browsetitles">
+			    <h1>Rating</h1></a>
+			</li>
+			<li><a href="tempBrowsePage.html"class="browsetitles">
+			    <h1>Favorites</h1></a>
+			</li>
+		    </ul>    
+		</div>
+	    </div>
+	    <div data-role="footer" data-id="navbar" data-position="fixed">
+		<div data-role="navbar">
+		    <ul>
+			<li><a data-icon="home" href="#home">Home</a></li>
+			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="info" href="#about">About</a></li>
+		    </ul>
+		</div>    
+	    </div>
 	</div>
-	<div>
-	    <label for="search"></label><input type="search" id="search" value="" placeholder="Search Movies..." />
+	<div data-role="page" id="friends">
+	    <div data-role="header">
+		<h1>Friends</h1>
+	    </div>
+	    <div data-role="content">
+		<ul data-role="listview">
+		    <li data-role="list-divider">Today</li>
+		    <li>
+			<img src="images/Jonathan.jpg">
+			<h3>Jonathan Antonio</h3>
+			<h4><a href="http://www.imdb.com/title/tt1663662/?ref_=sr_1">Pacific Rim</a></h4>
+			<p>Really fun movie!</p></a>
+		    </li>
+		    <li>
+			<img src="images/Becca.jpg">
+			<h3>Becca Coffman</h3>
+			<h4><a href="http://www.imdb.com/title/tt0332280/?ref_=sr_1">The Notebook</a></h4>
+			<p>One of my all time favorites</p></a>
+		    </li>
+		    <li>
+			<img src="images/Heather.jpg">
+			<h3>Heather Shea</h3>
+			<h4><a href="http://www.imdb.com/title/tt2334879/?ref_=sr_2">White House Down</a></h4>
+			<p>Why did I left my wife drag me to this?</p></a>
+		    </li>
+		    <li data-role="list-divider">Yesterday</li>
+		    <li>
+			<img src="images/Drew.jpg">
+			<h3>Drew Evans</h3>
+			<h4><a href="http://www.imdb.com/title/tt1690953/?ref_=sr_1">Despicable Me 2</a></h4>
+			<p>Loved it! Just as fun as the first.</p></a>
+		    </li>
+		     <li>
+			<img src="images/Debby.jpg">
+			<h3>Debby Ayars</h3>
+			<h4><a href="http://www.imdb.com/title/tt0379786/?ref_=sr_1">Serenity</a></h4>
+			<p>Can't believe it took me so long to see this awesome movie!</p></a>
+		    </li>
+		</ul>
+	    </div>
+	    <div data-role="footer" data-id="navbar" data-position="fixed">
+		<div data-role="navbar">
+		    <ul>
+			<li><a data-icon="home" href="#home">Home</a></li>
+			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="info" href="#about">About</a></li>
+		    </ul>
+		</div>    
+	    </div>
 	</div>
-	<div id="browselist">
-	    <ul data-role="listview">
-		<li data-role="list-divider" id="browse">Browse by...</li>
-		<li><a href="tempBrowsePage.html"class="browsetitles">Movie Title</a></li>
-		<li><a href="tempBrowsePage.html"class="browsetitles">Date</a></li>
-		<li >Genre
-		    <div >
-			<ul data-role="listview" >
-			    <li>Action<img src="images/Action.psd"></li>
-			    <li>Comedy<img src="images/Comedy.psd"></li>
-			    <li>Drama<img src="images/Drama.psd"></li>
-			    
-			</ul>
-		    </div>
-		
-		
-		</li>
-		<li><a href="tempBrowsePage.html"class="browsetitles">Rating</a></li>
-		<li><a href="tempBrowsePage.html"class="browsetitles">Favorites</a></li>
-	    </ul>
+	<div data-role="page" id="about">
+	    <div data-role="header">
+		    <h1>About</h1>
+	    </div>
+	    <div data-role="content">
+		<p>All about this app</p>
+	    </div>
+	    <div data-role="footer" data-id="navbar" data-position="fixed">
+		<div data-role="navbar">
+		    <ul>
+			<li><a data-icon="home" href="#home">Home</a></li>
+			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="info" href="#about">About</a></li>
+		    </ul>
+		</div>    
+	    </div>
 	</div>
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
