Added custom themes to styling of app.

--- a/MIU/Week_2/Antonio_Ariana_GoldApp/additem.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/additem.html
@@ -28,7 +28,7 @@
                         <label for="where" id="where">Where I Saw The Movie:</label>
                         <ul>
                             <li><input type="radio" checked value="Movie Theater" id="movietheater" name="where" /><label for="movietheater">Movie Theater</label></li>
-                            <li><input type="radio" value="At Home" id="home" name="where" /><label for="home">At Home</label></li>
+                            <li><input type="radio" value="At Home" id="atHome" name="where" /><label for="home">At Home</label></li>
                             <li><input type="radio" value="Other" id="other" name="where" /><label for="other">Other</label></li>
                         </ul>
                     </li>
