--- a/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
@@ -31,47 +31,19 @@
 		<div>
 		    <ul data-role="listview"  data-theme="d">
 			<li data-role="list-divider" data-theme="c">Browse by...</li>
-			<li><a href="tempBrowsePage.html">
-			    <h1>Movie Title</h2></a>
+			<li><a href="#tempBrowsePage">
+			    <h1>Movie Title</h1></a>
 			</li>
-			<li><a href="tempBrowsePage.html">
-			    <h1>Date</h2></a>
+			<li><a href="#tempBrowsePage">
+			    <h1>Date</h1></a>
 			</li>
-			<li><a href="#">
-			    <h1>Genre</h1></a>
-			    <!--<div >
-				<ul data-role="listview" data-inset="true"  data-theme="c">
-				    <li><a href="tempBrowsePage.html" data-ajax="false">
-					<img src="images/Action.psd">
-					<h2>Action</h2>
-				    </li>
-				    <li><a href="tempBrowsePage.html" data-ajax="false">
-					<img src="images/Comedy.psd">
-					<h2>Comedy</h2>
-				    </li>
-				    <li><a href="tempBrowsePage.html" data-ajax="false">
-					<img src="images/Drama.psd">
-					<h2>Drama</h2>
-				    </li>
-				    <li><a href="tempBrowsePage.html" data-ajax="false">
-					<img src="images/Romance.psd">
-					<h2>Romance</h2>
-				    </li>
-				    <li><a href="tempBrowsePage.html" data-ajax="false">
-					<img src="images/Horror.psd">
-					<h2>Horror</h2>
-				    </li>
-				    <li><a href="tempBrowsePage.html" data-ajax="false">
-					<img src="images/Other.psd">
-					<h2>Other</h2>
-				    </li>
-				</ul>
-			    </div>-->
+			<li><a href="#genres">
+			    <h1>Genres</h1></a>
 			</li>
-			<li><a href="tempBrowsePage.html">
+			<li><a href="#tempBrowsePage">
 			    <h1>Rating</h1></a>
 			</li>
-			<li><a href="tempBrowsePage.html">
+			<li><a href="#tempBrowsePage">
 			    <h1>Favorites</h1></a>
 			</li>
 		    </ul>    
@@ -98,32 +70,32 @@
 			<img src="images/Jonathan.jpg">
 			<h3>Jonathan Antonio</h3>
 			<h4><a href="http://www.imdb.com/title/tt1663662/?ref_=sr_1">Pacific Rim</a></h4>
-			<p>Really fun movie!</p></a>
+			<p>Really fun movie!</p>
 		    </li>
 		    <li>
 			<img src="images/Becca.jpg">
 			<h3>Becca Coffman</h3>
 			<h4><a href="http://www.imdb.com/title/tt0332280/?ref_=sr_1">The Notebook</a></h4>
-			<p>One of my all time favorites</p></a>
+			<p>One of my all time favorites</p>
 		    </li>
 		    <li>
 			<img src="images/Heather.jpg">
 			<h3>Heather Shea</h3>
 			<h4><a href="http://www.imdb.com/title/tt2334879/?ref_=sr_2">White House Down</a></h4>
-			<p>Why did I left my wife drag me to this?</p></a>
+			<p>Why did I left my wife drag me to this?</p>
 		    </li>
 		    <li data-role="list-divider" data-theme="d">Yesterday</li>
 		    <li>
 			<img src="images/Drew.jpg">
 			<h3>Drew Evans</h3>
 			<h4><a href="http://www.imdb.com/title/tt1690953/?ref_=sr_1">Despicable Me 2</a></h4>
-			<p>Loved it! Just as fun as the first.</p></a>
+			<p>Loved it! Just as fun as the first.</p>
 		    </li>
 		     <li>
 			<img src="images/Debby.jpg">
 			<h3>Debby Ayars</h3>
 			<h4><a href="http://www.imdb.com/title/tt0379786/?ref_=sr_1">Serenity</a></h4>
-			<p>Can't believe it took me so long to see this awesome movie!</p></a>
+			<p>Can't believe it took me so long to see this awesome movie!</p>
 		    </li>
 		</ul>
 	    </div>
@@ -179,6 +151,65 @@
 		    </ul>
 		</div>    
 	    </div>
+	</div>
+	<div data-role="page" id="genres" data-theme="c">
+	    <div data-role="header" data-theme="c">
+		<h1>Genres</h1>
+	    </div>
+	    <div data-role="content">
+		<ul data-role="listview" data-inset="false"  data-theme="d">
+		    <li><a href="#tempBrowsePage" data-ajax="false">
+			<img src="images/Comedy.jpg">
+			<h2>Comedy</h2></a>
+		    </li>
+		    <li><a href="#tempBrowsePage" data-ajax="false">
+			<img src="images/Drama.jpg">
+			<h2>Drama</h2></a>
+		    </li>
+		    <li><a href="#tempBrowsePage" data-ajax="false">
+			<img src="images/Romance.jpg">
+			<h2>Romance</h2></a>
+		    </li>
+		    <li><a href="#tempBrowsePage" data-ajax="false">
+			<img src="images/Horror.jpg">
+			<h2>Horror</h2></a>
+		    </li>
+		    <li><a href="#tempBrowsePage" data-ajax="false">
+			<img src="images/Action.jpg">
+			<h2>Action<h2></a>
+		    </li>
+		    <li><a href="#tempBrowsePage" data-ajax="false">
+			<img src="images/Other.jpg">
+			<h2>Other</h2></a>
+		    </li>
+		</ul>
+	    </div>
+	    <div data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
+		<div data-role="navbar" data-iconpos="left">
+		    <ul>
+			<li><a data-icon="home" href="#home">Home</a></li>
+			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="info" href="#about">About</a></li>
+		    </ul>
+		</div>    
+	    </div>   
+	</div>
+	<div data-role="page" id="tempBrowsePage" data-theme="c">
+	    <div data-role="header">
+		<h1>Browse</h1>
+	    </div>
+	    <div data-role="content">
+		<p>Oops! There are no movies to browse.</p>
+	    </div>
+	    <div data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
+		<div data-role="navbar" data-iconpos="left">
+		    <ul>
+			<li><a data-icon="home" href="#home">Home</a></li>
+			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="info" href="#about">About</a></li>
+		    </ul>
+		</div>    
+	    </div>   
 	</div>
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
