--- a/MIU/Week_2/Antonio_Ariana_GoldApp/additem.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/additem.html
@@ -13,42 +13,44 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css" />	
 	<title>New Movie</title>
     </head>
-    <body background="http://www.clker.com/cliparts/F/d/D/v/2/B/movie-reel-hi.png" id="background">
-	<h1><img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/>Add Movie<img src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/></h1>
+    <body class="body" background="http://www.clker.com/cliparts/F/d/D/v/2/B/movie-reel-hi.png" id="background">
+	<h1 id="addMovie"><img class="star" src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/>Add Movie<img class="star" src="http://www.clker.com/cliparts/e/2/d/e/1194985751726798828stock-star.svg.thumb.png"/></h1>
         <div id="bgDiv">
 	<form action="#" method="post" id="movieForm">
 	    <fieldset>
-                <legend>Movie Information</legend>
-		<ul id="errors"></ul>
-                <ul>
-                    <li><label for="title">* Movie Title:</label><br><input type="text" id="title" /></li>
-                    <li><label for="date">* Date Seen:</label><br><input type="date" id="date" /></li>
-                    <li id="select"><label for="genre">Movie Genre:</label><br/></li>
+                <legend id="movieInfo">Movie Information</legend>
+		<div id="fieldset">
+		<ul class="ulstyle" id="errors"></ul>
+                <ul class="ulstyle">
+                    <li><label class="label" for="title">* Movie Title:</label><br><input type="text" id="title" /></li>
+                    <li><label class="label" for="date">* Date Seen:</label><br><input type="date" id="date" /></li>
+                    <li id="select"><label class="label" for="genre">Movie Genre:</label><br/></li>
 		    <li>
-                        <label for="where" id="where">Where I Saw The Movie:</label>
-                        <ul>
+                        <label class="label" for="where" id="where">Where I Saw The Movie:</label>
+                        <ul class="ulstyle">
                             <li><input type="radio" checked value="Movie Theater" id="movietheater" name="where" /><label for="movietheater">Movie Theater</label></li>
                             <li><input type="radio" value="At Home" id="atHome" name="where" /><label for="home">At Home</label></li>
                             <li><input type="radio" value="Other" id="other" name="where" /><label for="other">Other</label></li>
                         </ul>
                     </li>
-                    <li><label for="friends">Who I Saw It With:</label><br><input type="text" id="friends" /></li>          
+                    <li><label class="label" for="friends">Who I Saw It With:</label><br><input type="text" id="friends" /></li>          
                     <li>
-			<label for="rating">Movie Rating:</label><br><input type="range" id="rating" min="1" max="10" step="1" value="5"/>
+			<label class="label" for="rating">Movie Rating:</label><br><input type="range" id="rating" min="1" max="10" step="1" value="5"/>
 			<!--<input for="ratingInput" type="text" id="ratingInput" value=""> -->
 		    </li>
-                    <li><label for="favorite">Save As Favorite?</label><br><input type="checkbox" id="favorite" /></li>
-		    <li><label for="review">* Movie Review:</label><br><textarea id="review"></textarea></li>
+                    <li><label class="label" for="favorite">Save As Favorite?</label><br><input type="checkbox" id="favorite" /></li>
+		    <li><label class="label" for="review">* Movie Review:</label><br><textarea id="review"></textarea></li>
                 </ul>
+		</div>
 		<input type="hidden" value="English" />
 		<input type="button" value="Log Movie" id="logMovie" />
 	    </fieldset>
 	</form>
 	</div>
 	<footer>
-            <a href="#" id="clearData">Clear Stored Data</a>
-            <a href="#" id="displayData">Display Data</a>
-	    <a href="additem.html" id="newMovie" style="display:none;">Add New Movie</a>
+            <a href="#" id="clearData" data-ajax="false">Clear Stored Data</a>
+            <a href="#" id="displayData" data-ajax="false">Display Data</a>
+	    <a href="additem.html" id="newMovie" style="display:none;" data-ajax="false">Add New Movie</a>
         </footer>
 	<!-- <script type="text/javascript">
 		function updateTextInput(val) {
