--- a/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
@@ -8,15 +8,19 @@
 	<meta name="description" content="Add Item for Movie Journal web app." />
         <meta name="keywords" content="web app, movie journal, list" />
         <meta name="robots" content="index, follow" />
-        <meta name="viewport" content="user-scalable=no, width=device-width" />
+        <meta name="HandheldFriendly" content="True">
+	<meta name="MobileOptimized" content="320"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="cleartype" content="on">
 	<link href="css/style.css" rel="stylesheet" type="text/css" data-ajax="false"/>
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
 	<link rel="stylesheet" href="themes/MyHollywood2.min.css" />
+	<script src="js/libs/modernizr.custom.min.js"></script>
 	<title>My Hollywood</title>
     </head>
     <body>
 	<div data-role="page" id="home" data-theme="c">
-	    <header data-theme="b"><div data-theme="b" class="logo"><img src="images/header1_03.gif" id="headerImg" data-theme="b"></div>
+	    <header data-theme="b"><div data-theme="b"><img src="images/header1_03.gif" id="headerImg" data-theme="b"></div>
 	    </header>
 	    <div data-role="content">
 		<div>
@@ -50,13 +54,13 @@
 		<div data-role="navbar" data-iconpos="left">
 		    <ul>
 			<li><a data-icon="home" href="#home">Home</a></li>
-			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="star" href="#friendsList">Friends</a></li>
 			<li><a data-icon="info" href="#about">About</a></li>
 		    </ul>
 		</div>    
 	    </div>
 	</div>
-	<div data-role="page" id="friends" data-theme="d">
+	<div data-role="page" id="friendsList" data-theme="d">
 	    <div data-role="header" data-theme="b">
 		<h1>Friends</h1>
 	    </div>
@@ -100,7 +104,7 @@
 		<div data-role="navbar" data-iconpos="left" data-theme="a">
 		    <ul>
 			<li><a data-icon="home" href="#home">Home</a></li>
-			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="star" href="#friendsList">Friends</a></li>
 			<li><a data-icon="info" href="#about">About</a></li>
 		    </ul>
 		</div>    
@@ -143,7 +147,7 @@
 		<div data-role="navbar" data-iconpos="left">
 		    <ul>
 			<li><a data-icon="home" href="#home">Home</a></li>
-			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="star" href="#friendsList">Friends</a></li>
 			<li><a data-icon="info" href="#about">About</a></li>
 		    </ul>
 		</div>    
@@ -155,27 +159,27 @@
 	    </div>
 	    <div data-role="content">
 		<ul data-role="listview" data-inset="false"  data-theme="d">
-		    <li><a href="#tempBrowsePage" data-ajax="false">
+		    <li><a href="#tempBrowsePage">
 			<img src="images/Comedy.jpg">
 			<h2>Comedy</h2></a>
 		    </li>
-		    <li><a href="#tempBrowsePage" data-ajax="false">
+		    <li><a href="#tempBrowsePage">
 			<img src="images/Drama.jpg">
 			<h2>Drama</h2></a>
 		    </li>
-		    <li><a href="#tempBrowsePage" data-ajax="false">
+		    <li><a href="#tempBrowsePage">
 			<img src="images/Romance.jpg">
 			<h2>Romance</h2></a>
 		    </li>
-		    <li><a href="#tempBrowsePage" data-ajax="false">
+		    <li><a href="#tempBrowsePage">
 			<img src="images/Horror.jpg">
 			<h2>Horror</h2></a>
 		    </li>
-		    <li><a href="#tempBrowsePage" data-ajax="false">
+		    <li><a href="#tempBrowsePage">
 			<img src="images/Action.jpg">
 			<h2>Action<h2></a>
 		    </li>
-		    <li><a href="#tempBrowsePage" data-ajax="false">
+		    <li><a href="#tempBrowsePage">
 			<img src="images/Other.jpg">
 			<h2>Other</h2></a>
 		    </li>
@@ -185,7 +189,7 @@
 		<div data-role="navbar" data-iconpos="left">
 		    <ul>
 			<li><a data-icon="home" href="#home">Home</a></li>
-			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="star" href="#friendsList">Friends</a></li>
 			<li><a data-icon="info" href="#about">About</a></li>
 		    </ul>
 		</div>    
@@ -202,7 +206,7 @@
 		<div data-role="navbar" data-iconpos="left">
 		    <ul>
 			<li><a data-icon="home" href="#home">Home</a></li>
-			<li><a data-icon="star" href="#friends">Friends</a></li>
+			<li><a data-icon="star" href="#friendsList">Friends</a></li>
 			<li><a data-icon="info" href="#about">About</a></li>
 		    </ul>
 		</div>    
