--- a/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
@@ -27,8 +27,17 @@
 		    <a href="addItem.html" data-ajax="false"><img id="filmreel" src="images/FilmReel3_03.gif"/></a>
 		</div>
 		<div>
-		    <label for="search"></label><input  data-theme="b" type="search" value="" placeholder="Search Movies..." />
-		</div><br>
+		<form action="#" method="post" id="searchForm">
+		    <fieldset>
+			<div id="fieldset">
+			    <ul class="ulstyle">
+				<li><label for="search"></label><input id="search" type="search" value="" placeholder="Search Movies" /></li>
+			    </ul>
+			</div>
+			<input type="button" value="Search" id="searchBtn" />
+		    </fieldset>
+		</form><br>
+	    </div>
 		<div>
 		    <ul data-role="listview"  data-theme="d">
 			<li data-role="list-divider" data-theme="c">Browse by...</li>
@@ -83,7 +92,7 @@
 			<img src="images/Heather.jpg">
 			<h3>Heather Shea</h3>
 			<h4><a href="http://www.imdb.com/title/tt2334879/?ref_=sr_2">White House Down</a></h4>
-			<p>Why did I left my wife drag me to this?</p>
+			<p>Why did I let my wife drag me to this?</p>
 		    </li>
 		    <li data-role="list-divider" data-theme="d">Yesterday</li>
 		    <li>
@@ -118,7 +127,7 @@
 		<div data-role="content">
 		    <ul data-role="listview" data-inset="true"  data-theme="d">
 			<li><a href="#author">Author Info</a></li>
-			<li><a href="#">Bronze App</a></li>
+			<li><a href="https://github.com/p32424/mdv-projects/tree/master/MIU/Week_2/Antonio_Ariana_BronzeApp">Bronze App</a></li>
 			<li><a href="https://github.com/p32424/mdv-projects/tree/gh-pages/MIU/Week_2/Antonio_Ariana_GoldApp">Gold gh-pages</a></li>
 			<li><a href="https://github.com/p32424/mdv-projects/tree/gh-pages/MIU/Week_2/Antonio_Ariana_BronzeApp">Bronze gh-pages</a></li>
 			<li><a href="https://github.com/p32424/mdv-projects">GitHub Repo</a></li>
@@ -210,7 +219,7 @@
 			<li><a data-icon="info" href="#about">About</a></li>
 		    </ul>
 		</div>    
-	    </div>   
+	    </div>
 	</div>
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
