--- a/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
@@ -131,6 +131,7 @@
 			<li><a href="https://github.com/p32424/mdv-projects/tree/gh-pages/MIU/Week_2/Antonio_Ariana_GoldApp">Gold gh-pages</a></li>
 			<li><a href="https://github.com/p32424/mdv-projects/tree/gh-pages/MIU/Week_2/Antonio_Ariana_BronzeApp">Bronze gh-pages</a></li>
 			<li><a href="https://github.com/p32424/mdv-projects">GitHub Repo</a></li>
+			<li><a href="#credits">Credits</a></li>
 		    </ul>
 		</div>
 	    </div>
@@ -210,6 +211,23 @@
 	    </div>
 	    <div data-role="content">
 		<p>Oops! There are no movies to browse.</p>
+	    </div>
+	    <div data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
+		<div data-role="navbar" data-iconpos="left">
+		    <ul>
+			<li><a data-icon="home" href="#home">Home</a></li>
+			<li><a data-icon="star" href="#friendsList">Friends</a></li>
+			<li><a data-icon="info" href="#about">About</a></li>
+		    </ul>
+		</div>    
+	    </div>
+	</div>
+	<div data-role="page" id="credits" data-theme="c">
+	    <div data-role="header">
+		<h1>Credits</h1>
+	    </div>
+	    <div data-role="content">
+		<p>All images courtesy of iStockPhoto</p>
 	    </div>
 	    <div data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
 		<div data-role="navbar" data-iconpos="left">
