--- a/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/index.html
@@ -205,8 +205,9 @@
 		</div>    
 	    </div>   
 	</div>
-	<div data-role="page" id="tempBrowsePage" data-theme="c">
+	<div data-role="page" id="tempBrowsePage" data-theme="c" data-add-back-btn="true" >
 	    <div data-role="header">
+		<a href="#home" data-icon="delete" addBackBtn="true" data-rel="back">Back</a>
 		<h1>Browse</h1>
 	    </div>
 	    <div data-role="content">
