--- a/MIU/Week_2/Antonio_Ariana_BronzeApp/index.html
+++ b/MIU/Week_2/Antonio_Ariana_BronzeApp/index.html
@@ -222,6 +222,6 @@
 	</div>
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-	<script type="text/javascript" src="js/main.js" data-ajax="false"></script>
+	<script type="text/javascript" src="js/search.js" data-ajax="false"></script>
     </body>
 </html>
