Added a few more form elements.

--- a/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
@@ -247,8 +247,11 @@
 	    </div>
 	    <div data-role="content">
 		<form action="" method="post" id="addItemForm">
-		    <label for="movieTitle">* Movie Title</label>
-		    <input type="text" name="movieTitle" id="movieTitle"/>
+		    <label for="movieTitle">* Movie Title:</label>
+		    <input type="text" name="movieTitle" id="movieTitle" placeholder="ex. The Lord Of The Rings"/>
+		    <label for="dateSeen">* Date Seen:</label>
+		    <input type="date" id="dateSeen" name="dateSeen"/>
+		    
 		</form>
 	    </div>
 	    <div data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
