Computer acting weird, saving to be safe.

--- a/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
@@ -282,9 +282,9 @@
 			<label for="seenwith">Who I Saw It With:</label>
 			<input type="text" name="seenwith" id="seenwith" />
 		    </div>
-		    <div data-role="fieldcontain">
+		    <div data-role="fieldcontain" >
 			<label for="rating">Movie Rating:</label>
-			<input type="range" name="rating" id="rating" value="5" min="0" max="10" />
+			<input data-theme="b" type="range" name="rating" id="rating" value="5" min="0" max="10" />
 		    </div>
 		    <div data-role="fieldcontain">
 			<fieldset data-role="controlgroup">
