--- a/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
@@ -256,8 +256,8 @@
 			<input class="required" type="date" id="dateseen" name="dateseen"/>
 		    </div>
 		    <div data-role="fieldcontain">
-			<label for="genre">Movie Genre:</label>
-			<select name="genre" id="genre">
+			<label for="genre">*Movie Genre:</label>
+			<select name="genre" id="genre" class="required">
 			    <option data-placeholder="true" value>Please Select A Genre</option>
 			    <option value="Comedy">Comedy</option>
 			    <option value="Drama">Drama</option>
@@ -300,7 +300,7 @@
 			<input type="submit" value="Save Movie" id="savemovie" />
 		    </div>
 		    <a href="#" id="clearData" data-ajax="false">Clear Stored Data</a>
-            <a href="#" id="displayData" data-ajax="false">Display Data</a>
+		    <a href="#" id="displayData" data-ajax="false">Display Data</a>
 		</form>
 	    </div>
 	    <div data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
@@ -316,7 +316,8 @@
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
-	<script type="text/javascript" src="js/search.js" data-ajax="false"></script>
+	<!--<script type="text/javascript" src="js/search.js" data-ajax="false"></script>-->
+	<script type="text/javascript" src="js/json.js"></script>
 	<script type="text/javascript" src="js/main.js" data-ajax="false"></script>
     </body>
 </html>
